--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "hmzs",
   "license": "hmzs",
   "dependencies": {
-    "discord.js": "^11.4.2"
+    "discord.js": "^11.4.2",
+    "snekfetch": "^4.0.4"
   }
-}
+} 
